# db_query_assistant

./: README.md  main.py  pyproject.toml
agent/: agent.py  data_agent.py  echarts_agent.py
frontend/: index.html
schemas/: agent_output.py  db_conn_config.py
utils/: test_connection.py
